feat: more api document #246
